# abi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ABI_REFACTOR_PLAN.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.zh.md  Rebuild.md  config_illumina_full.yaml  environments.yaml  metrics.tsv  package-lock.json  pyproject.toml  sample_sheet_illumina_test.tsv
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  opencode.yml  publish-pypi.yml  release.yml
baseline_comparison/: README.md
bench/paper_tasks/: README.md  metrics_schema.yaml  tasks.yaml
cmake/: AddBioinfoTool.cmake  AutoPlasmEnv.cmake  AutoPlasmTests.cmake  CreateLocalEnv.cmake  FindMamba.cmake
config/: default.yaml  schema.yaml  tool_registry.yaml
config/database_profiles/: full.yaml  light.yaml  shared.yaml
config/profiles/: dry_run.yaml  hpc_slurm.yaml  local.yaml
config/resource_profiles/: dev_small.yaml  hpc_large.yaml  hpc_standard.yaml
demo_artifacts/: README.md
docker/: .condarc  Dockerfile.amplicon  Dockerfile.metagenomic_plasmid  Dockerfile.metatranscriptomics  Dockerfile.rnaseq  Dockerfile.wgs  docker-compose.yml
docs/: README.md  _base.py  abi_final_development_plan.md  abi_final_development_plan_zh.md  abi_spec_v0.1.md  abi_spec_v0.1_zh.md  ablation_decision.md  agent_usage.md  agent_usage_zh.md  build_docs.sh  conf.py  development.md  development_zh.md  devlog.md  download_databases.md  experiments.md  experiments_zh.md  index.html  index.rst  job_service.md  metagenomic_plasmid.md  metagenomic_plasmid_zh.md  next_development_plan.md  next_steps_hpc_validation.md  openai_interface_standard.md  openai_interface_standard_zh.md  pipeline_biological_validity.md  plan_b_execution_plan.md  plugin_development_guide.md  plugin_development_guide_zh.md  release.md  release_zh.md  rnaseq_expression_workflow.md  submission_strategy_analysis.md  workflow_reproducibility_analysis.md
docs/_static/: custom.css  lang-toggle.css  lang-toggle.js
docs/diagrams/: abi-architecture.drawio  generate_abi_architecture_drawio.py
docs/en/: abi_sciplot_design.md  abi_spec_v0.1.md  agent_usage.md  api.rst  components_and_architecture.md  comprehensive-testing-audit.md  conf.py  development.md  development_workflow.md  devlog.md  full-engineering-gap-audit.md  hpc_development.md  illumina_pipeline_fix_plan.md  index.rst  job_service.md  metagenomic_plasmid.md  next_development_plan.md  openai_interface_standard.md  paper_evaluation.md  paper_execution_plan.md  paper_outline.md  plugin_development_guide.md  plugin_report_figure_spec.md  production_manual_acceptance_checklist.md  release.md  rnaseq_expression_workflow.md  runtime_locks.md  testing.md  tool-engineering-gap-audit.md  usage_guide.md  work_report_2026-06-20.md  workflow_validation.md
docs/experiments/: README.md  README_zh.md  metrics.tsv  traces.jsonl
docs/zh/: abi_sciplot_design.md  abi_spec_v0.1.md  agent_usage.md  components_and_architecture.md  conf.py  development.md  development_workflow.md  devlog.md  hpc_development.md  index.rst  job_service.md  metagenomic_plasmid.md  openai_interface_standard.md  paper_evaluation.md  paper_outline.md  plugin_development_guide.md  production_manual_acceptance_checklist.md  real_data_validation_datasets.md  release.md  rnaseq_expression_workflow.md  runtime_locks.md  testing.md  usage_guide.md  workflow_validation.md
envs/: abi-qc.yml  abi-stats.yml  abundance.yml  amplicon.yml  annotation.yml  assembly.yml  autoplasm-abundance.yml  autoplasm-annotation.yml  autoplasm-assembly.yml  autoplasm-base.yml  autoplasm-integronfinder.yml  autoplasm-nextflow.yml  autoplasm-plasmid-binning.yml  autoplasm-plasmid-detect.yml  autoplasm-qc.yml  autoplasm-stats.yml  autoplasm-visualization.yml  base.yml  easymeta-humann.yml  easymeta-p0.yml  integronfinder.yml  nextflow.yml  plasmid_binning.yml  plasmid_detect.yml  qc.yml  rnaseq.yml  stats.yml  visualization.yml  wgs.yml
examples/: config_assembly_full_run.yaml  config_full.yaml  config_hifi_smoke.yaml  config_hybrid_smoke.yaml  config_illumina_smoke.yaml  config_minimal.yaml  config_ont_smoke.yaml  sample_sheet.tsv  sample_sheet_hifi.tsv  sample_sheet_hybrid.tsv  sample_sheet_illumina.tsv  sample_sheet_ont.tsv  sample_sheet_transcriptomics.tsv
examples/fixtures/: tiny_R1.fastq  tiny_R2.fastq  tiny_contigs.fasta  tiny_long.fastq
examples/metagenomic_plasmid/: config_core_demo.yaml
examples/metatranscriptomics/: config_demo.yaml
figures/: README.md
golden_traces/: amplicon_16s.jsonl  metagenomic_plasmid.jsonl  metatranscriptomics.jsonl  rnaseq_expression.jsonl  wgs_bacteria.jsonl
integrations/opencode/: README.md  opencode.example.json
plugins/amplicon_16s/: abi-plugin.yaml  citation_registry.yaml  config_default.yaml  figure_specs.yaml  limitations.yaml  parsers.yaml  pipeline_dag.yaml  sample_sheet_template.tsv  standard_tables.yaml  tool_registry.yaml
plugins/easymetagenome/: README.md  abi-plugin.yaml  config_default.yaml  (+4 more)
scripts/: amplicon_diversity.py  analyze_scapp_plasmid_evidence.py  build_scapp_machine_evidence.py  check_module_coverage.py  check_release_identity.py  create_scapp_paper_figure_specs.py  dev_setup.py  download_databases.sh  download_rdp_sintax.sh  download_real_biodata.sh  download_sra_fastq.sh  emit_env_yamls.py  generate_synthetic_taxonomy.py  hifiasm_gfa_to_fasta.sh  install_deseq2.R  integrate_plasmid_supplement.py  migration_gate.py  normalize_hifiadapterfilt_output.sh  normalize_opera_ms_output.sh  reconstruct_scapp_truth.py  release_check.sh  repair_plasmid_standard_tables.py  score_scapp_predictions.py  setup_rnaseq_benchmark.py  setup_rnaseq_env.sh
skills/: README.md
tests/: conftest.py  test_amplicon_16s_plugin.py  test_cli.py  test_config.py  test_dag.py  test_dag_planner.py  test_documentation_artifacts.py  test_metatranscriptomics_plugin.py  test_report.py  test_rnaseq_expression_plugin.py  test_schemas.py  test_sdk_boundaries.py  test_tables.py  test_tsv_mapping.py  test_wgs_bacteria_plugin.py
(+738 files in other folders)
