# ── Build system ──────────────────────────────────────────────────────
# hatchling >=1.21.0 fixes a bug where the "dependencies" field was
# incorrectly validated as a URL under [project.urls] during editable
# installs.  See: pip install -e ".[dev]"  on Python 3.10.
[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "abi-agent"
version = "0.1.0"
description = "Agent-Bioinformatics Interface: plugin-based abstraction for AI-driven bioinformatics analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "BingkangGuo", email = "bingkangguo@gmail.com" }]
keywords = ["bioinformatics", "agent", "ai", "pipeline", "plasmid", "metagenomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/sleepinlava/abi"
Repository = "https://github.com/sleepinlava/abi"

# ── Optional dependencies ────────────────────────────────────────────
# Plugins may require packages outside the core dependency tree.
# Each key defines an ``pip install abi-agent[<key>]`` extra.
#
# [autoplasm]  — enables the metagenomic_plasmid plugin
# [dev]        — linting, formatting, type-checking, and testing tools
#
# The autoplasm imports in metagenomic_plasmid.py are lazy (imported
# inside each method, not at module level) so that the module can be
# imported without autoplasm installed.  The plugin registry in
# abi/plugins/__init__.py also catches ImportError for extra safety.
[project.optional-dependencies]
autoplasm = ["autoplasm>=0.1.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
abi = "abi.cli:main"
abi-dev-setup = "abi.dev_setup:main"

[project.entry-points."abi.plugins"]
metagenomic_plasmid = "abi.plugins.metagenomic_plasmid:MetagenomicPlasmidPlugin"
metatranscriptomics = "abi.plugins.metatranscriptomics:MetatranscriptomicsPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/abi"]

# Built-in plugin templates live outside src/ so editable installs and source-tree
# usage can share the same files. Include them in wheels at the same relative
# path expected by abi.config.PLUGIN_ROOT.
[tool.hatch.build.targets.wheel.force-include]
"plugins" = "plugins"

[tool.hatch.build.targets.sdist]
include = [
    "src/abi",
    "plugins",
    "tests",
    "examples",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
