# ── Build system ──────────────────────────────────────────────────────
# hatchling >=1.21.0 fixes a bug where the "dependencies" field was
# incorrectly validated as a URL under [project.urls] during editable
# installs.  See: pip install -e ".[dev]"  on Python 3.10.
[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "abi-agent"
version = "1.3.0"
description = "Agent-Bioinformatics Interface: plugin-based abstraction for AI-driven bioinformatics analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "BingkangGuo", email = "bingkangguo@gmail.com" }]
keywords = ["bioinformatics", "agent", "ai", "pipeline", "plasmid", "metagenomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/sleepinlava/abi"
Repository = "https://github.com/sleepinlava/abi"

[project.optional-dependencies]
mcp = [
    "mcp; python_version >= '3.10'",
]
report = [
    "jinja2",
    "matplotlib",
    "plotly",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "myst-parser>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
abi = "abi.cli:main"
abi-mcp = "abi.mcp.server:main"
autoplasm = "abi.autoplasm.cli:main"

[project.entry-points."abi.plugins"]
metagenomic_plasmid = "abi.plugins.metagenomic_plasmid:MetagenomicPlasmidPlugin"
metatranscriptomics = "abi.plugins.metatranscriptomics:MetatranscriptomicsPlugin"
rnaseq_expression = "abi.plugins.rnaseq_expression:RNASeqExpressionPlugin"
amplicon_16s = "abi.plugins.amplicon_16s:Amplicon16SPlugin"
wgs_bacteria = "abi.plugins.wgs_bacteria:WGSBacteriaPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/abi"]

# Built-in plugin templates live outside src/ so editable installs and source-tree
# usage can share the same files. Include them in wheels at the same relative
# path expected by abi.config.PLUGIN_ROOT.
[tool.hatch.build.targets.wheel.force-include]
"config" = "config"
"data/examples" = "data/examples"
"envs" = "envs"
"examples" = "examples"
"golden_traces" = "golden_traces"
"plugins" = "plugins"
"scripts/download_databases.sh" = "scripts/download_databases.sh"
"scripts/hifiasm_gfa_to_fasta.sh" = "scripts/hifiasm_gfa_to_fasta.sh"
"scripts/normalize_hifiadapterfilt_output.sh" = "scripts/normalize_hifiadapterfilt_output.sh"
"scripts/normalize_opera_ms_output.sh" = "scripts/normalize_opera_ms_output.sh"

[tool.hatch.build.targets.sdist]
include = [
    "CMakeLists.txt",
    "cmake",
    "config",
    "data/examples",
    "docs",
    "envs",
    "golden_traces",
    "src/abi",
    "plugins",
    "scripts",
    "tests",
    "examples",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "demo_artifacts",
    "baseline_comparison",
    "figures",
    "metrics.tsv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "smoke: end-to-end smoke tests that execute real bioinformatics tools (may be slow)",
    "requires_tools: tests that require conda environments with tools installed",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
exclude = ["*.R"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "no-any-return"]
