# ── Build system ──────────────────────────────────────────────────────
# hatchling >=1.21.0 fixes a bug where the "dependencies" field was
# incorrectly validated as a URL under [project.urls] during editable
# installs.  See: pip install -e ".[dev]"  on Python 3.10.
[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "abi-agent"
version = "1.5.2"
description = "Agent-Bioinformatics Interface: plugin-based abstraction for AI-driven bioinformatics analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "BingkangGuo", email = "bingkangguo@gmail.com" }]
keywords = ["bioinformatics", "agent", "ai", "pipeline", "plasmid", "metagenomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pandas>=1.5",
    "numpy>=1.21",
]

[project.urls]
Homepage = "https://github.com/sleepinlava/abi"
Repository = "https://github.com/sleepinlava/abi"

[project.optional-dependencies]
mcp = [
    "mcp; python_version >= '3.10'",
]
report = [
    "jinja2",
    "matplotlib",
    "plotly",
    "plotnine>=0.12",
    "seaborn>=0.12",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "myst-parser>=3.0",
    "roman>=4.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
abi = "abi.cli:main"
abi-mcp = "abi.mcp.server:main"
abi-sciplot = "abi.sciplot.cli:main"
autoplasm = "abi.autoplasm.cli:main"

[project.entry-points."abi.plugins"]
metagenomic_plasmid = "abi.plugins.metagenomic_plasmid:MetagenomicPlasmidPlugin"
metatranscriptomics = "abi.plugins.metatranscriptomics:MetatranscriptomicsPlugin"
rnaseq_expression = "abi.plugins.rnaseq_expression:RNASeqExpressionPlugin"
amplicon_16s = "abi.plugins.amplicon_16s:Amplicon16SPlugin"
wgs_bacteria = "abi.plugins.wgs_bacteria:WGSBacteriaPlugin"
easymetagenome = "abi.plugins.easymetagenome:EasyMetagenomePlugin"
viral_viwrap = "abi.plugins.viral_viwrap:ViralViWrapPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/abi"]

# Built-in plugin templates live outside src/ so editable installs and source-tree
# usage can share the same files. Include them in wheels at the same relative
# path expected by abi.config.PLUGIN_ROOT.
[tool.hatch.build.targets.wheel.force-include]
"config" = "config"
"data/examples" = "data/examples"
"envs" = "envs"
"examples" = "examples"
"golden_traces" = "golden_traces"
"plugins" = "plugins"
"scripts/download_databases.sh" = "scripts/download_databases.sh"
"scripts/hifiasm_gfa_to_fasta.sh" = "scripts/hifiasm_gfa_to_fasta.sh"
"scripts/normalize_hifiadapterfilt_output.sh" = "scripts/normalize_hifiadapterfilt_output.sh"
"scripts/normalize_opera_ms_output.sh" = "scripts/normalize_opera_ms_output.sh"

[tool.hatch.build.targets.sdist]
include = [
    "CMakeLists.txt",
    "cmake",
    "config",
    "data/examples",
    "docs",
    "envs",
    "golden_traces",
    "src/abi",
    "plugins",
    "scripts",
    "tests",
    "examples",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "demo_artifacts",
    "baseline_comparison",
    "figures",
]

# Hatch treats directories named ``envs`` as virtual-environment artifacts by
# default. These are tracked Conda specifications required by the packaged
# workflow, so force them into the sdist as well as the wheel.
[tool.hatch.build.targets.sdist.force-include]
"envs" = "envs"

[tool.pytest.ini_options]
testpaths = ["tests", "src/abi/sciplot/tests"]
pythonpath = ["src"]
markers = [
    "smoke: end-to-end smoke tests that execute real bioinformatics tools (may be slow)",
    "requires_tools: tests that require conda environments with tools installed",
    "performance: deterministic core performance and memory regression baselines",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
exclude = ["*.R"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "no-any-return"]
exclude = ["/(?:opt|usr)/(?:hostedtoolcache/)?[^/]*/.*site-packages/"]

[[tool.mypy.overrides]]
module = "abi.sciplot.adapters"
disable_error_code = ["call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = "abi.sciplot.schema.*"
# Pydantic Field(default_factory=<submodel>) — mypy cannot see through
# FieldInfo to infer that the submodel is constructed lazily.
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "abi.sciplot.tests.*"
disable_error_code = ["call-arg", "arg-type"]
